# gps_obd2_tracker

./: .gitignore  Makefile  README.md  output.tmp  pyproject.toml  requirements.txt  setup.py
doc/: presentation.md  unsupported.md
obdtracker/: __init__.py  api.py  api_caller.py  device_status.py  discovery.py  exceptions.py  location.py  models.py  obd.py  sms.py  updater.py  utils.py
odbtracker/: __init__.py  location.py
openapiv3/: __init__.py  api.py  api_caller.py  device_status.py  location.py  login_action.py  obd.py  updater.py  utils.py
tests/: test_api.py  test_api_caller.py  test_device_status.py  test_discovery.py  test_location.py  test_models.py  test_obd.py  test_sms.py  test_updater.py  test_utils.py
